<resources>
    <string name="app_name">Weather App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="current_temp">19</string>
    <string name="temp_unit">C</string>
    <string name="current_temp_max">max</string>
    <string name="current_min_temp">min</string>
    <string name="current_weather_description">description</string>
    <string name="current_time">time</string>
    <string name="current_weather_heading">main</string>
    <string name="current_humidity_value">20%</string>
    <string name="current_pressure_value">10Pa</string>
    <string name="current_uv_index_value">2</string>
    <string name="uv_index_label">Uv Index</string>
    <string name="current_pressure_label">Pressure</string>
    <string name="current_cloud_percentage">59%</string>
    <string name="clouds_label">Clouds</string>
    <string name="current_visibility_value">1000</string>
    <string name="current_visibility_label">Visibility</string>
    <string name="next_5_days_label">Next 5 Days</string>
    <string name="day1">day1</string>
    <string name="forecast_max_temp1">35</string>
    <string name="forecast_min_temp1">TextView</string>
    <string name="day3">day3</string>
    <string name="forecast_min_temp3">11</string>
    <string name="forecast_max_temp3">44</string>
    <string name="day2">day2</string>
    <string name="forecast_min_temp2">9</string>
    <string name="forecast_max_temp2">33</string>
    <string name="day4">day4</string>
    <string name="forecast_min_temp4">22</string>
    <string name="forecast_max_temp4">44</string>
    <string name="day5">day5</string>
    <string name="forecast_min_temp5">33</string>
    <string name="forecast_max_temp5">32</string>
    <string name="wind_speed_value">speed</string>
    <string name="wind_label">Wind</string>
    <string name="wind_direction">north</string>
</resources>
